@@ -1,3 +1,10 @@
+Fri Oct 29 07:25:44 BST 2010  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.h (pipeline_install_post_fork): Clarify that this is
+	  run in the child process.
+	  (pipeline_wait_all): Clarify that SIGPIPE is considered equivalent
+	  to exiting zero.
+
 Fri Oct 29 06:18:31 BST 2010  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c (pipecmd_new_sequencev): New function.
